--- a/package.json
+++ b/package.json
@@ -41,4 +41,9 @@
   "devDependencies": {
     "react-test-renderer": "^16.4.2"
   }
+  devServer: {
+    compress: true,
+    disableHostCheck: true,   // That solved it
+
+ } 
 }
