--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   "devDependencies": {
     "react-test-renderer": "^16.4.2"
   }
-  devServer: {
-    compress: true,
-    disableHostCheck: true,   // That solved it
+  "devServer": {
+    "compress": true,
+    "disableHostCheck": true,   // That solved it
 
  } 
 }
