--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "now-start": "node server/index.js",
+    "deploy": "now --public --dotenv=.env.prod -d"
   },
   "main": "server/",
   "proxy": {
@@ -39,6 +40,5 @@
   },
   "devDependencies": {
     "react-test-renderer": "^16.4.2"
-  },
-
+  }
 }
